--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,4 +1,7 @@
 .footer {
+    position: absolute;
+    bottom: 0;
+    width: 100vw;
     display: flex;
     justify-content: center;
     border-top: 2px solid #ccc;
