--- a/src/components/headDashboard/HeadDashboard.css
+++ b/src/components/headDashboard/HeadDashboard.css
@@ -9,12 +9,19 @@
     color: #fff;
     font-weight: bold;
     padding: 10px;
+    cursor: pointer;
 }
 
 .input {
     height: 30px;
     width: 200px;
     margin-bottom: 10px;
+}
+
+.input::placeholder {
+    padding-left: 10px;
+    font-size: 17px;
+    font-weight: 500;
 }
 
 .firstName {
@@ -28,9 +35,11 @@
 .btn {
     width: 80px;
     height: 30px;
+    border-color: #00bc77;
     background-color: #00bc77;
-    border: none;
-    color: white;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 .save-button {
