--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -6,6 +6,7 @@
     justify-content: center;
     border-top: 2px solid #ccc;
     padding: 2rem 0 1.5rem;
+    background-color: white;
 }
 
 .footer-text {
