--- a/src/components/inputForm/InputForm.css
+++ b/src/components/inputForm/InputForm.css
@@ -56,3 +56,10 @@
     padding: 5px;
     font-size: 1.2rem;
 }
+
+.msgErr{
+    display: block;
+    margin-top: 5px;
+    color: red;
+    font-weight: 600;
+}
